# rsyslog

./: .lgtm.yml  .travis.yml  AGENTS.md  CONTRIBUTING.md  ChangeLog  IMFILE  MODULE_AUTHOR_CHECKLIST.md  Makefile.am  README  README.md  action.c  action.h  blacklist.txt  conf_yaml_poc.c  configure.ac  dirty.h  tcpclt.c  tcps_sess.c  tcpsrv.c  template.c  template.h  threads.c
doc/: AGENTS.md  BUILDS_README.md  Makefile.am  README.md  build_rag_db.py  requirements.txt  rsyslog-yaml-schema.json
doc/ai/: BUILDING.md  CODING_STANDARDS.md  MODULES.md  module_map.yaml
doc/source/: conf.py  idx_reference.rst  index.rst  licensing.rst  templates.rst
doc/source/configuration/: filters.rst  index.rst  properties.rst  property_replacer.rst  templates.rst  yaml_config.rst
doc/source/configuration/modules/: fmpcre.rst  idx_function.rst  imbeats.rst  imtcp.rst  index.rst  mmsnarewinevtsec.rst  omelasticsearch.rst  omfile.rst  omfwd.rst  omhttp.rst  ompipe.rst  pmrfc3164.rst
doc/source/deployments/: index.rst
doc/source/deployments/rosi_collector/: index.rst  setup_walkthrough.rst
doc/source/development/: ratelimit_policy_yaml_plan.rst
doc/source/installation/: install_from_source.rst
doc/source/rainerscript/: global.rst  properties.rst  ratelimit.rst  variable_property_types.rst
doc/source/rainerscript/configuration_objects/: ratelimit.rst
doc/source/rainerscript/functions/: mo-fmpcre.rst  rs-strptime_to_rfc3339.rst
doc/source/reference/errors/: e2007.rst  e2013.rst  e2027.rst  (+5 more)
doc/source/troubleshooting/: index.rst  troubleshoot.rst
doc/source/tutorials/: index.rst  rosi_hetzner.rst
plugins/omazureeventhubs/: Makefile.am  omazureeventhubs.c
(+474 files in other folders)
